--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">ChatGPT</string>
     <string name="app_title">ChatGPT</string>
+    <string name="error_tips">Error Tips :</string>
+    <string name="btn_send">Send</string>
 </resources>
