--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="btn_send">Send</string>
     <string name="bar_session">Session</string>
     <string name="bar_new_session">New Session</string>
+    <string name="bar_session_item">session</string>
 </resources>
