--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
     <string name="dialog_save_success_tips">Saved successfully</string>
     <string name="dialog_key_change_tips">Changed successfully</string>
     <string name="apply">Apply Address</string>
+    <string name="delete_tips">Are you sure to delete it</string>
 
     <string name="address">PROJECT ADDRESS</string>
 </resources>
