--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
     <string name="temp_content">between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.</string>
     <string name="save">Save</string>
     <string name="model_title">Chat Model</string>
+
+    <string name="follow_content">Follow Content</string>
+
+    <string name="toast_cancel_task">cancel task</string>
+
 </resources>
