1.增加调整对话文本大小

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -34,5 +34,6 @@
     <string name="model_title">聊天模型</string>
 
     <string name="follow_content">跟随内容</string>
+    <string name="font_size">字体大小</string>
 
 </resources>
