--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -29,6 +29,8 @@
 
     <string name="address">项目地址</string>
 
+    <string name="context_limit">上下文条数</string>
+
     <string name="set_params">设置参数</string>
     <string name="temp_title">温度</string>
     <string name="temp_content">介于 0 和 2 之间。较高的值（如 0.8）将使输出更加随机，而较低的值（如 0.2）将使其更加集中和确定性。</string>
