--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="address">PROJECT ADDRESS</string>
 
     <string name="set_params">Set params</string>
+    <string name="context_limit">Context Limit</string>
 
     <string name="temp_title">Temperature</string>
     <string name="temp_content">between 0 and 2. Higher values like 0.8 will make the output more random, while lower values like 0.2 will make it more focused and deterministic.</string>
