1.add new model 2.handle error response code

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -40,6 +40,7 @@
     <string name="follow_content">跟随内容</string>
     <string name="font_size">字体大小</string>
     <string name="request_domain">请求域名</string>
+    <string name="first_message">首条0301</string>
 
 
 </resources>
